ie scrollbar fix

--- a/angular/material/sidebar.less
+++ b/angular/material/sidebar.less
@@ -4,7 +4,7 @@ md-sidenav {
         top:48px;
         left: 0em;
         bottom: auto;
-        max-height: calc(~'100% - 48px');
+        max-height: calc(~'100% - 48px') !important;
         overflow-x: hidden;
         &.md-locked-open {
             width: 370px;
